@@ -4,6 +4,10 @@ Change History
 1.7b2 Unreleased
 ----------------
 
+- Previous fix to duplicate action adapters did not preserve order of
+  execution. Fixed.
+  [smcmahon]
+
 - Fix misleading failure in attachments tests. Test didn't account for
   quick editor changes.
   [smcmahon]
